swath of scss fixes for mobiles devices, reduced image sizes to stop long lag time on load removed original backstretch component as it not used anymore

--- a/portfolio/src/components/backstretch/SketchBackstretch.scss
+++ b/portfolio/src/components/backstretch/SketchBackstretch.scss
@@ -10,7 +10,7 @@
   background-size: cover;
   color: $col-text-main;
   display: flex;
-  height: calc(100vh - 50px);
+  height: 100vh;
   justify-content: center;
   text-align: center;
   transition: 0.5;
