--- a/portfolio/src/components/nav/SharePanel.scss
+++ b/portfolio/src/components/nav/SharePanel.scss
@@ -19,7 +19,7 @@
     justify-content: center;
     padding: 0;
     position: fixed;
-    top: 97.5%;
+    top: 95.5%;
     width: 100%;
     z-index: 10;
   }
